# evidential-be

./: .betterleaks.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONVENTIONS.md  Dockerfile  Dockerfile.railway  Dockerfile.snapshots.railway  Dockerfile.tq.railway  EXPERIMENTS.md  README.md  Taskfile.yml  atlas.hcl  data.json  docker-bake.hcl  pyproject.toml  railway.json  railway.snapshots.json  railway.tq.json  requirements.macos_arm.txt  requirements.txt  xngin.settings.json  xngin.testing.settings.json
.cursor/rules/: no-pr-without-explicit-request.mdc
.github/: CODEOWNERS  pull_request_template.md  zizmor.yml
.github/workflows/: cleanup.yaml  coverage.yaml  debug.yml  lint.yaml  lint.yml  migrations.yaml  precommit.yaml  release.yaml  test.yaml  test.yml
app/: dependencies.py  main.py  settings.py  test_gsheets.py  test_main.py  test_sqlite_example.py  utils.py
app/testdata/: .gitignore
docs/: AIRPLANE-MODE.md  DEPLOYMENT.md  DOCKER.md  EXPERIMENTS.md  FAQ.md  INTEGRATION.md  MIGRATIONS.md  ONBOARDING-CLIENTS.md  READING-LIST.md  SECRETS.md  SQLALCHEMY.md  TASK-QUEUES.md  TESTING.md  UPDATING-TESTING-DWH.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_06f0985033d3ce98_handlers_py.html  z_06f0985033d3ce98_task_queue_py.html  z_06f0985033d3ce98_test_tq_py.html  z_06f0985033d3ce98_tq_test_support_py.html  z_272f90c4dc99306b_admin_api_converters_py.html  z_272f90c4dc99306b_admin_api_py.html  z_272f90c4dc99306b_admin_api_types_py.html  z_272f90c4dc99306b_generic_handlers_py.html  z_272f90c4dc99306b_test_admin_api_py.html  z_272f90c4dc99306b_test_admin_extra_py.html  z_272f90c4dc99306b_test_admin_py.html  z_272f90c4dc99306b_test_admin_users_api_py.html  z_3103cf4b20fd3e3c_assignment_adapters_py.html  z_3103cf4b20fd3e3c_common_api_types_py.html  z_3103cf4b20fd3e3c_common_enums_py.html  z_3103cf4b20fd3e3c_healthchecks_api_py.html  z_3103cf4b20fd3e3c_test_assignment_adapters_py.html  z_3103cf4b20fd3e3c_test_common_api_types_py.html  z_3233ab93451172bf_safe_resolve_py.html  z_3233ab93451172bf_test_safe_resolve_py.html  z_4c2f388c36838af7_bootstrap_py.html  z_4c2f388c36838af7_storage_format_converters_py.html  z_56ef3e8c0f95230f_assignment_py.html  z_56ef3e8c0f95230f_balance_py.html  z_56ef3e8c0f95230f_bandit_analysis_py.html  z_56ef3e8c0f95230f_bandit_sampling_py.html  z_56ef3e8c0f95230f_bandit_weights_to_prior_py.html  z_56ef3e8c0f95230f_cluster_icc_py.html  z_56ef3e8c0f95230f_cluster_power_py.html  z_56ef3e8c0f95230f_individual_power_py.html  z_56ef3e8c0f95230f_power_py.html  z_56ef3e8c0f95230f_stats_errors_py.html  z_5761836be98bf7ad_admin_api_client_py.html  z_5761836be98bf7ad_admin_integrations_api_client_py.html  z_5761836be98bf7ad_assertions_py.html  z_5761836be98bf7ad_experiments_api_client_py.html  (+67 more)
migrations/: .gitignore
migrations/sa_postgres/: 20241231225724.sql  20250109001424.sql  20250216030513.sql  20250226001153.sql  20250226201809.sql  20250228182145.sql  20250301003056.sql  20250411002419.sql  20250411005631.sql  20250414094503.sql  20250414184621.sql  20250415223746.sql  20250415232057.sql  20250416034224.sql  20250416035355.sql  20250416055401.sql  20250416060340.sql  20250416081652_backfill_arms.sql  20250416170215.sql  20250416231329.sql  20250416231416.sql  20250417001836.sql  20250417213916.sql  20250421003826.sql  20250424054645.sql  20250424145403.sql  20250424161227.sql  20250428071649.sql  20250428073500.sql  20250428085940.sql  20250512164930.sql  20250512175827.sql  20250514105348.sql  20250514221449.sql  20250519154717.sql  20250519174239.sql  20250520055604.sql  20250521165424.sql  20250521173920.sql  20250521174606.sql  (+62 more)
migrations/tools/: migrate_nodwh_datasources.py
src/: __init__.py
src/xngin/: __init__.py
src/xngin/apiserver/: api_types.py  apikeys.py  common_field_types.py  conftest.py  constants.py  customlogging.py  database.py  dependencies.py  exceptionhandlers.py  exceptions_common.py  flags.py  gsheet_cache.py  gsheets.py  limits.py  lrucache.py  main.py  middleware.py  openapi.py  pagination.py  proxy_webhook_types.py  request_encapsulation_middleware.py  routes.py  settings.py  settings_secrets.py  test_admin.py  test_api.py  test_apikeys.py  test_audience_spec_filter.py  test_experiments.py  test_experiments_common.py  test_experiments_proxy_mgmt_api.py  test_gsheet_cache.py  test_gsheets.py  test_main.py  test_openapi.py  test_pagination.py  test_power.py  test_proxy_mgmt_api.py  test_request_encapsulation_middleware.py  utils.py  (+1 more)
src/xngin/cli/: common.py  main.py
src/xngin/db_extensions/: __init__.py  custom_functions.py  test_custom_functions.py
src/xngin/events/: __init__.py  _types.py  common.py  experiment_created.py  turn_journeys_changed.py  webhook_sent.py
src/xngin/ops/: performance.py  sentry.py
src/xngin/schema/: schema_types.py
src/xngin/sheets/: config_sheet.py  gsheets.py  sheet_types.py  test_gsheets.py
src/xngin/sqlite_extensions/: __init__.py  custom_functions.py
src/xngin/stats/: __init__.py  analysis.py  assignment.py  assignment_test.py  balance.py  balance_test.py  bandit_analysis.py  bandit_sampling.py  bandit_weights_to_prior.py  block_randomize.py  cluster_icc.py  cluster_power.py  individual_power.py  power.py  power_test.py  stats_errors.py  test_analysis.py  test_assignment.py  test_balance.py  test_bandit_analysis.py  test_bandit_sampling.py  test_bandit_weights_to_prior.py  test_block_randomize.py  test_cluster_icc.py  test_cluster_power.py  test_individual_power.py  test_power.py
src/xngin/tq/: __init__.py  cli.py  conftest.py  handlers.py  main.py  queue.py  task_payload_types.py  task_queue.py  task_types.py  test_handlers.py  test_task_payload_types.py  test_tq.py  tq_test_support.py
src/xngin/xsecrets/: __init__.py  aws_provider.py  (+15 more)
static/: oidctest.html  pkcetest.html
tools/: acceptance.py  assign2csv.py  check_migrations_linear.sh  generate_clustered_data.py  generate_wide_dwh.py  localpg.py  migrate_experiment_fields.py  snapshot_sim.py
tools/migrations/: backfill_turn_journeys_webhooks.py
(+180 files in other folders)
